--- a/Practica1/ProcesoBusqueda/.local/install/ProcesoBusqueda.Mapper.json
+++ b/Practica1/ProcesoBusqueda/.local/install/ProcesoBusqueda.Mapper.json
@@ -1,1 +1,1 @@
-["D:\\ARCHIVOS E\\CHIPECH\\PROGRAMACION\\IA\\LAB\\IA1_Practicas_16\\Practica1\\ProcesoBusqueda\\Main.xaml"]
+["C:\\Users\\ccris\\Documents\\IA1_Practicas_16\\Practica1\\ProcesoBusqueda\\Main.xaml"]
